# veilTDC

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  ROADMAP.md  TESTING.md  atspi_query.py  build.rs  config.lua  install.sh  pkg.sh
.cargo/: config.toml
.github/workflows/: clippy.yml  release.yml  test.yml  velogin-release.yml
archive-veil/src/: tui.rs
veil-capture/: build.sh  build.zig
veil-capture/src/: convert.zig  egl_intercept.zig  intercept.zig  main.zig  main_minimal.zig  shm_out.zig  shm_ring.zig
veil-cli/: Cargo.toml
veil-cli/src/: input.rs  main.rs
veil-compositor/: Cargo.toml
veil-compositor/src/: capture_shm.rs  capture_zig.rs  gui.rs  lib.rs  uinput_input.rs  wayland_capture.rs  wayland_input.rs  wayland_screencopy.rs
veil-config/: Cargo.toml
veil-config/src/: lib.rs
veil-gpu/: Cargo.toml
veil-gpu/src/: lib.rs
veil-gpu/src/shaders/: halfblock.wgsl  luma.wgsl
veil-host/: Cargo.toml
veil-host/src/: detile.rs  font5x7.rs  input.rs  launcher.rs  layout.rs  lib.rs  lockfile.rs  main.rs  seat.rs  server.rs  sink.rs  vt.rs
veil-host/src/input_backend/: crossterm_input.rs  evdev_input.rs  mod.rs
veil-host/src/output/: drm.rs  mod.rs  terminal.rs
veil-login/: Cargo.toml  build.rs
veil-login/src/: main.rs  session.rs  spawn.rs  state.rs
veil-login/ui/: abyss.slint
veil-render/: Cargo.toml
veil-render/src/: lib.rs
veil-screencopy/: Makefile  screencopy.c  veil-screencopy
