[workspace]
members = ["veil-cli", "veil-compositor", "veil-render", "veil-config"]
resolver = "2"

[workspace.dependencies]
image        = "0.25"
clap         = { version = "4", features = ["derive"] }
mlua         = { version = "0.10", features = ["lua54", "vendored"] }
crossterm    = "0.28"
ctrlc        = "3"
portable-pty = "0.8"
vt100        = "0.15"
