[workspace]
members = ["veil-render", "veil-config", "veil-gpu", "veil-host"]
resolver = "2"

[workspace.dependencies]
image        = "0.25"
clap         = { version = "4", features = ["derive"] }
mlua         = { version = "0.10", features = ["lua54", "vendored"] }
crossterm    = "0.28"
ctrlc        = "3"
portable-pty = "0.8"
vt100        = "0.15"
wayland-client        = "0.31"
wayland-protocols-wlr  = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
rustix                = { version = "1", features = ["mm", "fs"] }
evdev                 = "0.13"
libc                  = "0.2"
flate2                = "1.1"
smithay               = { version = "0.7", default-features = false, features = ["wayland_frontend", "xwayland", "desktop"] }
calloop               = "0.14"
tracing               = "0.1"
