[package]
name    = "veil-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
veil-render  = { path = "../veil-render" }
portable-pty = { workspace = true }
vt100        = { workspace = true }
serde_json            = "1"
libc                  = "0.2"
wayland-client         = { workspace = true }
wayland-protocols-wlr  = { workspace = true }
wayland-protocols-misc = { workspace = true }
rustix                 = { workspace = true }
evdev                  = { workspace = true }
