[package]
name    = "veil-gpu"
version = "1.2.0"
edition = "2021"

# GPU-accelerated frame encoder for veil-host.
# Uses wgpu compute shaders to composite and encode frames on the GPU,
# offloading halfblock/luma sampling from the CPU.

[dependencies]
wgpu        = { version = "29", default-features = false, features = ["vulkan", "wgsl"] }
pollster    = "0.4"
bytemuck    = { version = "1.25", features = ["derive"] }
veil-render = { path = "../veil-render" }
